# cpp_kata_calculator

./: CMakeLists.txt  README.md  calculator.cpp  calculatorTest.cpp
